# supersmoother

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_HOWTO.md  pyproject.toml  setup.cfg  setup.py  supersmoother.py  test_plots.py
.github/workflows/: release.yml  test.yml
doc/: Makefile  basic_smoothers.rst  conf.py  index.rst  supersmoother.rst
doc/sphinxext/numpy_ext/: comment_eater.py  compiler_unparse.py  phantom_import.py  traitsdoc.py
examples/: Index.ipynb  Periodic.ipynb  Supersmoother.ipynb
supersmoother/: __init__.py  new_utils.py  smoother.py  supersmoother.py  utils.py  windowed_sum.py
supersmoother/tests/: test_basic_smoothers.py  test_fixed_span.py  test_smoother.py  test_supersmoother.py  test_utils.py  test_variable.py  test_variable_span.py
